force-app/main/default/objects/Lead/fields/Custom_test_lead_field__c.field-meta.xml
<CustomField>
    <fullName>Custom_test_lead_field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field for testing</description>
    <label>Custom test lead field</label>
    <type>Checkbox</type>
</CustomField>