force-app/main/default/objects/Lead/fields/Duplicate_Test__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Test</label>
    <type>Checkbox</type>
</CustomField>