force-app/main/default/objects/Lead/fields/GoodBad__c.field-meta.xml
<CustomField>
    <fullName>GoodBad__c</fullName>
    <label>GoodBad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Really Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>