force-app/main/default/objects/Lead/fields/Test_Nested_RT__c.field-meta.xml
<CustomField>
    <fullName>Test_Nested_RT__c</fullName>
    <label>Test Nested RT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>