force-app/main/default/objects/Lead/recordTypes/Another_Bug_Test.recordType-meta.xml
<RecordType>
    <fullName>Another_Bug_Test</fullName>
    <active>true</active>
    <businessProcess>Comercial Lead Process</businessProcess>
    <label>Another Bug Test</label>
</RecordType>