force-app/main/default/objects/Lead/recordTypes/Bug_Test.recordType-meta.xml
<RecordType>
    <fullName>Bug_Test</fullName>
    <active>true</active>
    <businessProcess>Comercial Lead Process</businessProcess>
    <label>Bug Test</label>
</RecordType>