force-app/main/default/objects/Lead/recordTypes/Test_Bug.recordType-meta.xml
<RecordType>
    <fullName>Test_Bug</fullName>
    <active>true</active>
    <businessProcess>Comercial Lead Process</businessProcess>
    <label>Test Bug</label>
</RecordType>